- Added support for Operator to Burble's switch, docker-compose-jvm.yaml - Created Dockerfile.dev.jvm that mounts our local target folder as a volume so we don't need to rebuild the image everytime a code change is made. The rbc.sh script now uses this file. - In pom.xml, added --enable-preview switch to the failsafe plugin so our use of Structured Concurrency doesn't break integration tests. - Using dedicated properties files for FakeOperator. - Various refactoring. - Fixed some (not all) of the dumbness in HttpMTHandler. - Fixed bug in PlatformGateway that was overriding the endpoint making it appear that we could access a host endpoint from inside a container. - Sndr.process() now takes a Message instead a String. - Prefixes (producer. and consumer.) added to key names in various properties files. - We were seeing additional auto-named queues being created as a consequence of how the RabbitQueueConsumer was handling the setup. Fixed this by specifying all the arguments to Channel.queueDeclare() instead of using the no-arg version. - In support of this fix, created RabbitQueueFunctions to share logic for naming exchanges by the queueName. Note: when we have additional queues this mapping may change. - Added a shutdown() method to RabbitQueueConsumer and RabbitQueueProducer in support of OperatorMessageFlowIT which creates multiple instances of Operator (one per test method.)  The input for all tests after the first was still being processed by the first Operator's consumer. The new shutdown() method calls close() on the  connections and channels to avoid this situation. Also added a shutdown() method to Operator that calls shutdown on consumer and producer members. - NOTE: Still need to set up a RabbitMQ container for OperatorMessageFlowIT. - "Fixed" at least partially, EndToEndMessagingIT. Added LogConsumers to the ComposeContainer setup to we can see what's happening inside. Wrapped the test method with assertDoesNotThrow, updated the way we discover the Rcvr's 