@@ -248,6 +248,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
                 <!--<configuration>
                     <skipITs>true</skipITs>
                 </configuration>-->
